--- a/recetasmoreiras/src/index.css
+++ b/recetasmoreiras/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400;500;600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400;500;600;700, 900&display=swap');
 
 html,
 body,
@@ -7,10 +7,29 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: "Roboto-Slab", sans-serif
+  font-family: 'Roboto-Slab', sans-serif;
 }
 
 .app {
   display: flex;
   position: relative;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on Hover */
+::-webkit-scrollbar-track:hover {
+  background: #555;
 }
