--- a/recetasmoreiras/src/components/global/sideNavbar.css
+++ b/recetasmoreiras/src/components/global/sideNavbar.css
@@ -13,7 +13,7 @@
 /* *Also these themes and colors are only placeholder for now, until I get a better sense of css styling fundamentals in terms of flexbox etc */
 .sideNavbarListIcons {
   margin-left: 2rem;
-  color: red;
+  color:#e0e0e0;
 }
 
 /* Side Navbar text */
@@ -21,6 +21,6 @@
 /* *Also these themes and colors are only placeholder for now, until I get a better sense of css styling fundamentals in terms of flexbox etc */
 .sideNavbarText {
   background-color: purple;
-  font-weight: 900;
+  font-weight: 550;
   font-size: 16px;
 }
